--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,9 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   top: 0;
   left: 30px;
   right: 30px;
-  z-index: 99; }
+  z-index: 99;
+  padding: 10px 0; /* Espacement intérieur en haut et en bas */
+}
 
 .menu-absolute {
   position: absolute;
@@ -194,19 +196,19 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
         display: inline-block;
         text-decoration: none !important; }
         .site-nav .site-navigation .site-menu > li > a:hover {
-          color: #ffffff; }
+          color: #ef2121; }
       .site-nav .site-navigation .site-menu > li.cta-button a {
         padding: 6px 20px;
         border: 1px solid transparent;
-        color: #ffffff;
+        color: #ff3c00;
         background: #e84545;
         border-radius: 4px; }
         .site-nav .site-navigation .site-menu > li.cta-button a:hover {
-          color: #ffffff;
+          color: #ef2121;
           background-color: transparent;
-          border-color: rgba(255, 255, 255, 0.3); }
+          border-color: rgb(218, 0, 0); }
       .site-nav .site-navigation .site-menu > li.active > a {
-        color: #ffffff; }
+        color: #ef2121; }
     .site-nav .site-navigation .site-menu .has-children {
       position: relative; }
       .site-nav .site-navigation .site-menu .has-children > a {
@@ -1042,8 +1044,12 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   opacity: 1; }
 
 .isotope-card {
-  border-radius: 5px;
-  overflow: hidden; }
+  overflow: hidden;
+  padding: 50px; /* Ajouter un espacement intérieur de 20 pixels autour de chaque carte */
+  margin-bottom: 20px;
+
+
+}
   .isotope-card > a {
     overflow: hidden;
     position: relative;
@@ -1070,6 +1076,10 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
       transition: .3s all ease;
       -webkit-transform: scale(1);
       -ms-transform: scale(1);
+      border-radius: 10px;!important; /* Définir le rayon de bordure pour arrondir les coins */
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); /* Ajouter une ombre douce */
+
+
       transform: scale(1); }
     .isotope-card > a:hover:before {
       visibility: visible;
@@ -1090,6 +1100,9 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     left: 50%;
     width: 100%;
     opacity: 0;
+    box-shadow: 0 4px 8px rgb(252, 99, 99,0.5); /* Ajouter une ombre douce */
+   border-radius: 30px;
+
     visibility: hidden;
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
@@ -1130,6 +1143,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
 
 .isotope-card {
   margin-bottom: 30px;
+  border-radius: 30px;
   display: block; }
   .isotope-card .relative {
     margin-bottom: 20px; }
