--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Ubuntu:wght@500&display=swap");
+
 /*
 * Template Name: Append
 * Template Author: Untree.co
@@ -36,30 +38,30 @@ body {
     visibility: visible; }
 
 a {
-  color: #e84545;
+  color: #f96d6d;
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease; }
   a:hover {
-    color: #e84545;
+    color: #f96d6d;
     text-decoration: none; }
 
 h1, h2, h3, h4, h5 {
   color: #000839; }
 
 .text-primary {
-  color: #e84545 !important; }
+  color: #f96d6d !important; }
 
 .text-black {
   color: #000000 !important; }
 
 a.text-primary {
-  color: #e84545 !important; }
+  color: #f96d6d !important; }
   a.text-primary:hover {
-    color: #e84545 !important; }
+    color: #f96d6d !important; }
 
 .bg-primary {
-  background-color: #e84545 !important; }
+  background-color: #f96d6d !important; }
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   font-family: "Montserrat", sans-serif; }
@@ -76,8 +78,8 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     -webkit-box-shadow: none;
     box-shadow: none; }
   .btn.btn-primary {
-    background: #e84545;
-    border-color: #e84545; }
+    background: #f96d6d;
+    border-color: #f96d6d; }
     .btn.btn-primary:hover {
       border-color: #ea5757;
       background: #ea5757; }
@@ -91,19 +93,19 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     border: 1px solid #ffffff; }
     .btn.btn-outline-white:hover {
       background: #ffffff;
-      color: #e84545 !important; }
+      color: #f96d6d !important; }
   .btn.btn-outline-black {
     border: 1px solid rgba(0, 0, 0, 0.1); }
     .btn.btn-outline-black:hover {
       background: transparent;
-      color: #e84545 !important; }
+      color: #f96d6d !important; }
 
 .form-control, .custom-select {
   border: 2px solid #e9ecef;
   font-size: 16px;
   height: 40px; }
   .form-control:active, .form-control:focus, .custom-select:active, .custom-select:focus {
-    border-color: #e84545;
+    border-color: #f96d6d;
     -webkit-box-shadow: none;
     box-shadow: none; }
 
@@ -125,7 +127,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
         padding-left: 15px; } }
 
 .spinner-border {
-  color: #e84545; }
+  color: #f96d6d; }
 
 /*PRELOADING------------ */
 #overlayer {
@@ -165,7 +167,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   -ms-transform: translateY(-50%);
   transform: translateY(-50%); }
   .logo a {
-    color: #e84545; }
+    color: #f96d6d; }
 
 .site-nav {
   position: absolute;
@@ -203,7 +205,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
         padding: 6px 20px;
         border: 1px solid transparent;
         color: #ff3c00;
-        background: #e84545;
+        background: #f96d6d;
         border-radius: 4px; }
         .site-nav .site-navigation .site-menu > li.cta-button a:hover {
           color: #ef2121;
@@ -269,19 +271,19 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
           transition: 0s all;
           color: #000000; }
         .site-nav .site-navigation .site-menu .has-children .dropdown .active {
-          color: #e84545 !important; }
+          color: #f96d6d !important; }
         .site-nav .site-navigation .site-menu .has-children .dropdown > li {
           list-style: none;
           padding: 0;
           margin: 0;
           min-width: 180px; }
           .site-nav .site-navigation .site-menu .has-children .dropdown > li.active > a {
-            color: #e84545 !important; }
+            color: #f96d6d !important; }
           .site-nav .site-navigation .site-menu .has-children .dropdown > li > a {
             padding: 5px 20px;
             display: block; }
             .site-nav .site-navigation .site-menu .has-children .dropdown > li > a:hover {
-              color: #e84545; }
+              color: #f96d6d; }
           .site-nav .site-navigation .site-menu .has-children .dropdown > li.has-children > a:before {
             content: "\e315";
             right: 20px; }
@@ -289,9 +291,9 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
             left: 100%;
             top: 0; }
             .site-nav .site-navigation .site-menu .has-children .dropdown > li.has-children > .dropdown li a:hover, .site-nav .site-navigation .site-menu .has-children .dropdown > li.has-children > ul li a:hover {
-              color: #e84545; }
+              color: #f96d6d; }
           .site-nav .site-navigation .site-menu .has-children .dropdown > li.has-children:hover > a, .site-nav .site-navigation .site-menu .has-children .dropdown > li.has-children:active > a, .site-nav .site-navigation .site-menu .has-children .dropdown > li.has-children:focus > a {
-            color: #e84545; }
+            color: #f96d6d; }
       .site-nav .site-navigation .site-menu .has-children:hover > a, .site-nav .site-navigation .site-menu .has-children:focus > a, .site-nav .site-navigation .site-menu .has-children:active > a {
         color: #ffffff; }
       .site-nav .site-navigation .site-menu .has-children:hover, .site-nav .site-navigation .site-menu .has-children:focus, .site-nav .site-navigation .site-menu .has-children:active {
@@ -400,12 +402,12 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
       position: relative;
       color: #000000; }
       .site-mobile-menu .site-nav-wrap a:hover {
-        color: #e84545; }
+        color: #f96d6d; }
     .site-mobile-menu .site-nav-wrap li {
       position: relative;
       display: block; }
       .site-mobile-menu .site-nav-wrap li.active > a {
-        color: #e84545; }
+        color: #f96d6d; }
     .site-mobile-menu .site-nav-wrap .arrow-collapse {
       position: absolute;
       right: 0px;
@@ -492,9 +494,9 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a {
       color: #000000 !important; }
       .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a:hover, .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a.active {
-        color: #e84545 !important; }
+        color: #f96d6d !important; }
     .sticky-wrapper.is-sticky .site-navbar .site-menu > li.active a {
-      color: #e84545 !important; }
+      color: #f96d6d !important; }
   .sticky-wrapper .shrink {
     padding-top: 0px !important;
     padding-bottom: 0px !important; }
@@ -603,7 +605,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     display: block;
     margin-bottom: 30px;
     font-size: 50px;
-    color: #e84545; }
+    color: #f96d6d; }
 
 .section-stack {
   position: relative; }
@@ -681,7 +683,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     color: #cccccc; }
     .pricing .price > span > span {
       font-size: 3rem;
-      color: #e84545; }
+      color: #f96d6d; }
   .pricing ul li {
     margin-bottom: 20px; }
 
@@ -704,7 +706,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   .ul-check.success li:before {
     color: #28a745; }
   .ul-check.primary li:before {
-    color: #e84545; }
+    color: #f96d6d; }
 
 .site-section {
   padding: 5rem 0; }
@@ -764,7 +766,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     position: absolute;
     left: 50%;
     top: 50%;
-    color: #e84545;
+    color: #f96d6d;
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%); }
@@ -828,7 +830,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     .site-blocks-cover .btn:hover {
       border-color: #ffffff;
       background-color: #ffffff;
-      color: #e84545; }
+      color: #f96d6d; }
   .site-blocks-cover .desc {
     font-size: 1.4rem;
     font-weight: 300; }
@@ -873,7 +875,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
       width: 40px;
       height: 40px;
       border-radius: 50%;
-      background: #e84545; }
+      background: #f96d6d; }
       .how-it-works .step .icon-wrap > span {
         font-family: "Montserrat", sans-serif;
         font-size: 18px;
@@ -939,7 +941,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
 /*--------- Start Portfolio Area -------------*/
 .portfolio-area .primary-btn {
   color: #ffffff;
-  background-color: #e84545;
+  background-color: #f96d6d;
   margin-left: auto;
   margin-right: auto; }
 
@@ -981,7 +983,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   transition: width 350ms ease-out; }
 
 .portfolio-area .filters ul li.active {
-  color: #e84545; }
+  color: #f96d6d; }
 
 .portfolio-area .filters-content {
   margin-top: 50px; }
@@ -1139,9 +1141,9 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
       -o-transition: .3s all ease;
       transition: .3s all ease; }
       .filters ul li:hover {
-        color: #e84545; }
+        color: #f96d6d; }
       .filters ul li.active {
-        color: #e84545; }
+        color: #f96d6d; }
 
 .isotope-card {
   margin-bottom: 30px;
@@ -1257,7 +1259,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   height: 50px;
   border-radius: 20px;
   position: relative;
-  color: #e84545;
+  color: #f96d6d;
   background-color: #ffffff; }
   .service-2 .service-icon > svg {
     position: absolute;
@@ -1300,7 +1302,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     overflow: hidden; }
     .service-2.link.active .service-icon {
       color: #ffffff;
-      background-color: #e84545; }
+      background-color: #f96d6d; }
 
 .section-grey {
   padding-top: 30px;
@@ -1332,7 +1334,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   width: 40px;
   height: 40px;
   position: relative;
-  background: #e84545;
+  background: #f96d6d;
   border-radius: 4px;
   position: relative;
   top: 0;
@@ -1351,7 +1353,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     background: #ffffff;
     top: -2px; }
     .slider-team-wrap .slider-nav a:hover span {
-      color: #e84545; }
+      color: #f96d6d; }
 
 .more {
   position: relative;
@@ -1377,16 +1379,16 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   .more:hover {
     color: #ffffff; }
     .more:hover span {
-      background: #e84545; }
+      background: #f96d6d; }
   .more.dark {
     color: #000000; }
     .more.dark > span {
       color: #000000; }
     .more.dark:hover {
-      color: #e84545; }
+      color: #f96d6d; }
       .more.dark:hover span {
         color: #ffffff;
-        background: #e84545; }
+        background: #f96d6d; }
 
 .article {
   margin-bottom: 90px; }
@@ -1581,7 +1583,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
       padding: 30px 0; } }
   .pricing-section .save-percent {
     font-size: 10px;
-    background: #e84545;
+    background: #f96d6d;
     padding: 4px 10px;
     font-weight: 700;
     border-radius: 30px;
@@ -1633,7 +1635,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
       box-shadow: 0 10px 30px -7px rgba(0, 0, 0, 0.1);
       border-radius: 7px; }
       .pricing-section .pricing-item.active h3 {
-        color: #e84545; }
+        color: #f96d6d; }
     .pricing-section .pricing-item ul {
       text-align: left; }
       .pricing-section .pricing-item ul li {
@@ -1641,7 +1643,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
         margin-bottom: 8px; }
     .pricing-section .pricing-item .price-wrap {
       display: block;
-      color: #e84545;
+      color: #f96d6d;
       font-weight: 700;
       font-size: 30px;
       line-height: 1.5; }
@@ -1676,7 +1678,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   position: relative; }
   .unit-4 .unit-4-icon span {
     font-size: 3rem;
-    color: #e84545; }
+    color: #f96d6d; }
   .unit-4 .unit-4-icon:before {
     position: absolute;
     content: "";
@@ -1775,7 +1777,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     margin-bottom: 15px; }
   .blog_entry .more a {
     position: relative;
-    color: #e84545;
+    color: #f96d6d;
     padding-bottom: 10px; }
   .blog_entry:hover {
     -webkit-box-shadow: 0 15px 30px -7px rgba(0, 0, 0, 0.2);
@@ -1822,12 +1824,12 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
       left: 15px; }
     .custom-accordion .accordion-item .btn-link[aria-expanded="true"] {
       font-weight: 700;
-      color: #e84545; }
+      color: #f96d6d; }
       .custom-accordion .accordion-item .btn-link[aria-expanded="true"]:before {
         font-family: 'icomoon';
         content: "\f147";
         position: absolute;
-        color: #e84545;
+        color: #f96d6d;
         top: 50%;
         -webkit-transform: translateY(-50%);
         -ms-transform: translateY(-50%);
@@ -1835,7 +1837,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   .custom-accordion .accordion-item.active {
     z-index: 2; }
     .custom-accordion .accordion-item.active .btn-link {
-      color: #e84545;
+      color: #f96d6d;
       -webkit-box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.1);
       box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.1); }
   .custom-accordion .accordion-item .accordion-body {
@@ -1876,7 +1878,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   background: #ccc; }
 
 .control input:checked ~ .control__indicator {
-  background: #e84545; }
+  background: #f96d6d; }
 
 .control:hover input:not([disabled]):checked ~ .control__indicator,
 .control input:checked:focus ~ .control__indicator {
@@ -1912,7 +1914,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   border-color: #7b7b7b; }
 
 .control--checkbox input:disabled:checked ~ .control__indicator {
-  background-color: #e84545;
+  background-color: #f96d6d;
   opacity: .2; }
 
 .gal-item {
@@ -2004,7 +2006,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
       border-radius: 50%;
       background: rgba(0, 0, 0, 0.2); }
     .owl-single .owl-dots .owl-dot.active span {
-      background: #e84545; }
+      background: #f96d6d; }
 
 .testimonial {
   max-width: 500px;
@@ -2031,7 +2033,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     left: 0; }
 
 .list-check.primary li:before {
-  color: #e84545; }
+  color: #f96d6d; }
 
 .site-footer {
   padding-top: 70px;
@@ -2043,7 +2045,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   .site-footer a {
     color: #000000; }
     .site-footer a:hover {
-      color: #e84545; }
+      color: #f96d6d; }
   .site-footer .widget {
     margin-bottom: 30px; }
     .site-footer .widget h3 {
@@ -2068,14 +2070,14 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
           -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%); }
         .site-footer .widget .social li a:hover {
-          color: #e84545; }
+          color: #f96d6d; }
     .site-footer .widget .links li {
       display: block;
       margin-bottom: 10px; }
       .site-footer .widget .links li a {
         color: #000000; }
         .site-footer .widget .links li a:hover {
-          color: #e84545; }
+          color: #f96d6d; }
   .site-footer .copyright {
     position: relative;
     padding-top: 40px;
@@ -2097,4 +2099,3 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
 *
 * Chronicle Display Roman font was substituted for similar fonts from Google Fonts.
 */
-
