--- a/css/time.css
+++ b/css/time.css
@@ -57,7 +57,7 @@ main {
     min-height: 35vh;
     padding-top: 15vh;
     width: calc(var(--timeline-width) / 2);
-    padding-inline: 8px;
+    padding-inline: 20px;
 &::before {
      position: absolute;
      top: 0;
@@ -65,7 +65,7 @@ main {
      width: 40px;
      height: 40px;
      border-radius: 50%;
-     background: #8fb1e9;
+     background: #8fb1e9 ;
      border: 3px solid blanchedalmond;
      content: "";
      translate: 50% 0;
@@ -2367,4 +2367,54 @@ img {
     color: #666; /* Couleur du texte */
     margin-top: 20px; /* Marge en haut pour séparer du paragraphe précédent */
     padding-left: 20px; /* Décalage à gauche pour l'apparence de liste */
+}
+/*Estilos generales del boton whatsapp*/
+.whatsapp-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 9999;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: #25D366;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    animation: breathe 2s ease-in-out infinite;
+}
+
+/*Estilos solo al icono whatsapp*/
+.whatsapp-btn i {
+    color: #fff;
+    font-size: 24px;
+    animation: beat 2s ease-in-out infinite;
+    text-decoration: none;
+}
+
+/*Estilos con animation contorno respirando*/
+@keyframes breathe {
+    0% {
+        box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.5);
+    }
+    70% {
+        box-shadow: 0 0 0 15px rgba(37, 211, 102, 0);
+    }
+    100% {
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
+}
+
+/*Estilos de animacion del icono latiendo*/
+@keyframes beat {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.2);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
